<resources>
    <string name="app_name">Barter studencki WAT</string>
    <string name="password">Hasło</string>
    <string name="email">Email studencki</string>
    <string name="watman">Watman</string>
    <string name="logo_wat">Logo wat</string>
    <string name="email_example">Imie.nazwisko@student.wat.edu.pl</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="missing_account">Zarejestruj się</string>
    <string name="repassword">Ponów hasło</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="enter_password">Podaj hasło</string>
    <string name="enter_password_again">Podaj hasło ponownie</string>
    <string name="go_back">Wróć</string>
    <string name="wrong_email_or_password_toast">Błędny email lub hasło</string>
    <string name="not_matching_passwords_toast">Podane hasła różnią się od siebie</string>
    <string name="failed_retrofit_request_toast">Wystąpił nieoczekiwany błąd. Spróbuj ponownie później</string>
    <string name="successful_registration_toast">Pomyślnie utworzono użytkownika</string>
    <string name="token_expired_toast">Sesja wygasła. Zaloguj się ponownie</string>
    <string name="welcome_toast">Witaj %s!</string>
    <string name="settings">Ustawienia</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="successful_sign_out">Wylogowano pomyślnie</string>
    <string name="my_products">Moje produkty</string>
    <string name="my_offers">Moje oferty</string>
    <string name="product_image">Zdjęcie produktu</string>
    <string name="home">Strona główna</string>
    <string name="make_an_offer">Złóż ofertę</string>
    <string name="x">X</string>
    <string name="others">Inne</string>
    <string name="authorization_header">Authorization</string>
    <string name="title">Nazwa</string>
    <string name="enter_title">Wprowadź nazwę</string>
    <string name="description">Opis</string>
    <string name="enter_description">Wprowadź opis</string>
    <string name="add">Dodaj</string>
    <string name="load_image">Dodaj\nzdjęcie</string>
    <string name="category">Kategoria</string>
    <string name="specialization">Specjalizacja</string>
    <string name="cannot_read_image">Nie można wczytać pliku</string>
    <string name="successfully_added_new_product">Pomyślnie dodano produkt</string>
    <string name="message">Wiadomość</string>
    <string name="give_offer">Podaj ofertę</string>
    <string name="confirm">Zatwierdź</string>
    <string name="cancel">Anuluj</string>
    <string name="successfully_added_offer">Pomyślnie złożono ofertę</string>
    <string name="unsuccessfully_added_offer">Nie udało się złożyć oferty</string>
    <string name="unsuccessfully_added_new_product">Pomyślnie złożono ofertę</string>
    <string name="wait_till_details_load">Proszę poczekać, aż szczegóły produktu zostaną wczytane</string>
    <string name="yes">tak</string>
    <string name="no">nie</string>
    <string name="discard_changes_title">Odrzucić zmiany?</string>
    <string name="discard_changes_message">Czy na pewno chcesz odrzucić wprowadzone zmiany?</string>
    <string name="delete_title">Usunąć?</string>
    <string name="delete_message">Czy na pewno chcesz to usunąć?</string>
    <string name="delete">Usuń</string>
    <string name="successfully_deleted_product">Pomyślnie usunięto produkt</string>
    <string name="unsuccessfully_deleted_product">Nie udało się usunąć produktu</string>
    <string name="address">Adres</string>
    <string name="address_hint">Wprowadź swój adres</string>
    <string name="cannot_get_address">Nie udało się odnaleźć adresu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_search_phrase">Wprowadź szukaną frazę</string>
    <string name="distance">Odległość</string>
    <string name="enter_max_distance">Maksymalna odległość</string>
    <string name="search">Wyszukaj</string>
    <string name="choose_filters">Wybierz filtry</string>
    <string name="accept">Przyjmij</string>
    <string name="reject">Odrzuć</string>
</resources>
