<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/watman"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_user_products"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/my_products" />
        <item
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/my_offers" />
    </group>

    <item android:title="Inne">
        <menu>
            <item
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />
            <item
                android:id="@+id/sign_out_button"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>