<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".ui.authentication.RegisterFragment">

    <ImageView
        android:id="@+id/logo_wat"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_wat"
        android:src="@drawable/logo_wat_napis" />

    <TextView
        android:id="@+id/new_user_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_wat"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_email_label"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/new_user_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_email"
        android:layout_marginTop="10sp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_password_label"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:hint="@string/enter_password"/>

    <TextView
        android:id="@+id/new_user_repassword_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_password"
        android:layout_marginTop="10sp"
        android:text="@string/repassword"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_user_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_repassword_label"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:hint="@string/enter_password_again"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_user_repassword"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        android:textSize="15sp" />

    <Button
        android:id="@+id/back_to_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/watman"
        android:src="@drawable/watman" />

</RelativeLayout>