<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".authentication.LoginFragment">

    <ImageView
        android:id="@+id/logo_wat"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_wat"
        android:src="@drawable/logo_wat_napis" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_wat"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_label"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10sp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_label"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/missing_account"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/watman"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/watman"
        android:src="@drawable/watman" />

</RelativeLayout>