<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".login.LoginActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo_wat"
        android:id="@+id/logo_wat"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_wat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/email_label"
        android:layout_below="@id/logo_wat"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/email"
        android:hint="@string/email_example"
        android:textAlignment="center"
        android:layout_below="@+id/email_label"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/email"
        android:layout_marginTop="10sp"
        android:id="@+id/password_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:id="@+id/password"
        android:layout_below="@+id/password_label"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in"
        android:textSize="15sp"
        android:id="@+id/login_button"
        android:layout_below="@id/password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_account"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/watman"
        android:id="@+id/watman"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/watman" />


</RelativeLayout>