<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.filters.FiltersFragment">

    <data>

        <variable
            name="filtersViewModel"
            type="pl.krzywyyy.barter.ui.main.filters.FiltersViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_filters"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_search_phrase"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={filtersViewModel.filters.searchPhrase}" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{filtersViewModel.productCategoryAdapter}"
                bind:productCategory="@={filtersViewModel.filters.category}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialization"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{filtersViewModel.specializationAdapter}"
                bind:productSpecialization="@={filtersViewModel.filters.specialization}" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/distance"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_max_distance"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={filtersViewModel.filters.distance}" />

        <Button
            android:id="@+id/search_with_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/search" />

    </LinearLayout>


</layout>