<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.offer.OfferFragment">

    <data>

        <variable
            name="offerViewModel"
            type="pl.krzywyyy.barter.ui.main.offer.OfferViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/give_offer"
            android:importantForAutofill="no"
            android:inputType="none"
            android:lines="5"
            android:text="@={offerViewModel.offer.message}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_offer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/confirm_offer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:text="@string/confirm"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</layout>